--- a/rabbitmq/rabbitmq_rbac.yaml
+++ b/rabbitmq/rabbitmq_rbac.yaml
@@ -3,13 +3,13 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: rabbitmq 
-  namespace: test-rabbitmq 
+  namespace: default
 ---
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: endpoint-reader
-  namespace: test-rabbitmq 
+  namespace: default
 rules:
 - apiGroups: [""]
   resources: ["endpoints"]
@@ -19,7 +19,7 @@ kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: endpoint-reader
-  namespace: test-rabbitmq
+  namespace: default
 subjects:
 - kind: ServiceAccount
   name: rabbitmq
