--- a/cassandra/values.yaml
+++ b/cassandra/values.yaml
@@ -15,7 +15,7 @@ service:
 
 ## Persist data to a persistent volume
 persistence:
-  enabled: true
+  enabled: false
   ## cassandra data Persistent Volume Storage Class
   ## If defined, storageClassName: <storageClass>
   ## If set to "-", storageClassName: "", which disables dynamic provisioning
