--- a/kube-arangodb/templates/deployment.yaml
+++ b/kube-arangodb/templates/deployment.yaml
@@ -91,7 +91,7 @@ subjects:
 ## deployment/deployment.yaml
 {{- if .Values.Deployment.Create }}
 
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: arango-deployment-operator
